# firefox-updater

./: CMakeLists.txt  main.cpp
cli/: abstract_option.h  options_manager.cpp  options_manager.h
cli/options/: arch_option.cpp  arch_option.h  edition_option.cpp  edition_option.h  lang_option.cpp  lang_option.h  path_option.cpp  path_option.h
include/utils/: array.h
src/: main.cpp
src/cli/: abstract_option.cpp  abstract_option.h  options_manager.cpp  options_manager.h
src/cli/options/: arch_option.cpp  arch_option.h  edition_option.cpp  edition_option.h  lang_option.cpp  lang_option.h  path_option.cpp  path_option.h
